--- a/Lesson_2_NeuralNetworks.ipynb
+++ b/Lesson_2_NeuralNetworks.ipynb
@@ -282,7 +282,7 @@
         "\n",
         "```Python\n",
         "from keras.optimizers import SGD\n",
-        "model.compile(loss='categorical_crossentropy', optimizer=SGD(lr=0.01, momentum=0.9, nesterov=True))\n",
+        "model.compile(loss='categorical_crossentropy', optimizer=SGD(learning_rate=0.01, momentum=0.9, nesterov=True))\n",
         "```\n",
         "\n",
         "You can now iterate on your training data in batches:\n",
@@ -1373,7 +1373,7 @@
         "])\n",
         "stacked_ae = keras.models.Sequential([stacked_encoder, stacked_decoder])\n",
         "stacked_ae.compile(loss=\"binary_crossentropy\",\n",
-        "                   optimizer=keras.optimizers.SGD(lr=1.5), metrics=[rounded_accuracy])\n",
+        "                   optimizer=keras.optimizers.SGD(learning_rate=1.5), metrics=[rounded_accuracy])\n",
         "history = stacked_ae.fit(X_train, X_train, epochs=20,\n",
         "                         validation_data=(X_valid, X_valid))"
       ],
@@ -1629,7 +1629,7 @@
         "])\n",
         "conv_ae = keras.models.Sequential([conv_encoder, conv_decoder])\n",
         "\n",
-        "conv_ae.compile(loss=\"binary_crossentropy\", optimizer=keras.optimizers.SGD(lr=1.0),\n",
+        "conv_ae.compile(loss=\"binary_crossentropy\", optimizer=keras.optimizers.SGD(learning_rate=1.0),\n",
         "                metrics=[rounded_accuracy])\n",
         "history = conv_ae.fit(X_train, X_train, epochs=5,\n",
         "                      validation_data=(X_valid, X_valid))"
